--- a/src/simdsp.ui
+++ b/src/simdsp.ui
@@ -298,6 +298,9 @@ p, li { white-space: pre-wrap; }
           <property name="spacing">
            <number>0</number>
           </property>
+          <item row="0" column="0">
+           <widget class="SDView" name="sdview" native="true"/>
+          </item>
          </layout>
         </item>
        </layout>
