--- a/src/view/sdview.ui
+++ b/src/view/sdview.ui
@@ -364,7 +364,10 @@
              <number>0</number>
             </property>
             <property name="maximum">
-             <number>44100</number>
+             <number>4000</number>
+            </property>
+            <property name="singleStep">
+             <number>40</number>
             </property>
             <property name="value">
              <number>100</number>
